--- a/ClientWeb/src/index.html
+++ b/ClientWeb/src/index.html
@@ -1,122 +1,68 @@
-<!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Отчет по ошибкам</title>
+    <title>Мои отчёты</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-        crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@1.9.12"></script>
-    <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.reports.js"
-        ></script>
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.designer.js"
-        ></script>
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.viewer.js"
-        ></script>
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.blockly.editor.js"
-        ></script>
-        <script type="text/javascript">
-            function onLoad() {
-                var report = new Stimulsoft.Report.StiReport();
-                report.loadFile('../reports/SimpleList.mrt');
-
-                var designer = new Stimulsoft.Designer.StiDesigner();
-                designer.renderHtml('content');
-                designer.report = report;
-            }
-        </script>
-</head>
-<body>
-<div class="mx-2 mt-4">
-    <h4 class="mb-3">Отчет по ошибкам</h4>
-    <form id="reportForm" class="row g-2 align-items-center">
-        <div class="col-auto">
-            <label class="form-label mb-0">Месяц:</label>
-            <select class="form-select" name="month">
-                <option value="1">Январь</option>
-                <option value="2">Февраль</option>
-                <option value="3">Март</option>
-                <option value="4">Апрель</option>
-                <option value="5">Май</option>
-                <option value="6">Июнь</option>
-                <option value="7">Июль</option>
-                <option value="8">Август</option>
-                <option value="9">Сентябрь</option>
-                <option value="10">Октябрь</option>
-                <option value="11">Ноябрь</option>
-                <option value="12">Декабрь</option>
-            </select>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.reports.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.viewer.js"></script>
+    <link href="index.css" rel="stylesheet">
+  </head>
+  <body class="p-3">
+    <div class="container">
+      <div class="nav-toolbar d-flex">
+        <div class="nav-tabs-wrapper d-flex">
+          <ul class="nav nav-tabs" id="reportTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="tests-tab" data-bs-toggle="tab" data-bs-target="#tests" type="button" role="tab"> Тестовый отчёт </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link active" id="users-tab" data-bs-toggle="tab" data-bs-target="#users" type="button" role="tab"> Отчёт по клиентам </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="errors-tab" data-bs-toggle="tab" data-bs-target="#errors" type="button" role="tab"> Отчет по ошибкам </button>
+            </li>
+          </ul>
         </div>
-
-        <div class="col-auto">
-            <label class="form-label mb-0">Год:</label>
-            <select class="form-select" name="year">
-                <option>2024</option>
-                <option selected>2025</option>
-            </select>
+        <div class="d-flex ms-auto">
+          <button class="btn btn-outline-secondary rounded-circle d-flex btn-icon p-0 justify-content-center align-items-center me-1" id="btn-html" title="Скачать HTML">
+            <img src="html.svg" alt="HTML" onclick="exportToHTML()" class="svg-icon">
+          </button>
+          <button class="btn btn-outline-secondary rounded-circle d-flex btn-icon p-0 justify-content-center align-items-center" id="btn-pdf" title="Скачать PDF">
+            <img src="pdf.svg" alt="PDF" onclick="exportToPDF()" class="svg-icon">
+          </button>
         </div>
-
-        <div class="col-auto d-flex gap-2">
-            <button type="button" class="btn btn-primary"
-                    hx-post="/api/report/html"
-                    hx-target="#reportResult"
-                    hx-include="#reportForm">
-                HTML
-            </button>
-
-            <button type="button" class="btn btn-success"
-                    hx-post="/api/report/pdf"
-                    hx-target="#reportResult"
-                    hx-include="#reportForm">
-                PDF
-            </button>
-            <button id="stats-button" 
-                        hx-post="/api/users/auth-users-stats" 
-                        hx-target="#report-container"
-                        hx-indicator="#loading-spinner"
-                        hx-swap="innerHTML">
-                    Загрузить статистику пользователей
-            </button>
+      </div>
+      <div class="tab-content mt-3">
+        <div class="tab-pane fade" id="tests" role="tabpanel">
+          <div style="display: none;" hx-post="http://127.0.0.1:5000/users/auth-users-stats" hx-trigger="load-tests-report from:body" hx-target="#reportResult" hx-swap="innerHTML"></div>
         </div>
-    </form>
-
-    <hr class="my-4">
-
-    <div id="loading-spinner" class="htmx-indicator">
-        Загрузка...
+        <div class="tab-pane fade show active" id="users" role="tabpanel">
+          <div style="display: none;" hx-post="http://127.0.0.1:5000/users/main-stats" hx-trigger="load-users-report from:body" hx-target="#reportResult" hx-swap="innerHTML"></div>
+        </div>
+        <div class="tab-pane fade" id="errors" role="tabpanel">
+          <form id="errorsForm">
+            <div class="row mb-3">
+              <div class="col">
+                <label class="form-label">От месяца</label>
+                <input type="month" name="monthFrom" class="form-control" required>
+              </div>
+              <div class="col">
+                <label class="form-label">До месяца</label>
+                <input type="month" name="monthTo" class="form-control" required>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Сформировать</button>
+          </form>
+        </div>
+      </div>
+      <div id="reportResult" class="mt-4">
+        <div class="justify-content-center align-items-center d-flex">
+          <div class="spinner-border" role="status"></div>
+        </div>
+      </div>
     </div>
-
-    <div id="report-container">
-        
-    </div>
-    
-    <!-- <script type="text/javascript">
-        // Create the report designer with default options and show it in this place
-        var designer = new Stimulsoft.Designer.StiDesigner();
-
-        // Create a new report instance
-        var report = new Stimulsoft.Report.StiReport();
-        // Load report from url
-        report.loadFile("../reports/SimpleList.mrt");
-        // Assign report to the designer
-        designer.report = report;
-    </script> -->
-</div>
-
-<script 
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-    crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
