--- a/Demo/index.html
+++ b/Demo/index.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Отчеты</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-      }
-      .report-section {
-        margin-bottom: 20px;
-      }
-      .report-title {
-        font-weight: bold;
-      }
-      .button {
-        margin-left: 10px;
-        padding: 5px 10px;
-        cursor: pointer;
-      }
-      #info-block {
-        border: 1px solid #ccc;
-        padding: 10px;
-        min-height: 100px;
-        margin-top: 20px;
-      }
-    </style>
-    <!-- Stimulsoft Reports.JS -->
+    <meta charset="UTF-8">
+    <title>Отчет по ошибкам</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <script
-      src="./Scripts/stimulsoft.reports.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="./Scripts/stimulsoft.viewer.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="./Scripts/stimulsoft.designer.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="./Scripts/stimulsoft.blockly.editor.js"
-      type="text/javascript"
-    ></script>
-  </head>
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.reports.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.designer.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.viewer.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/stimulsoft-reports-js/Scripts/stimulsoft.blockly.editor.js"
+        ></script>
+        <script type="text/javascript">
+            function onLoad() {
+                var report = new Stimulsoft.Report.StiReport();
+                report.loadFile('../reports/SimpleList.mrt');
+
+                var designer = new Stimulsoft.Designer.StiDesigner();
+                designer.renderHtml('content');
+                designer.report = report;
+            }
+        </script>
+  <meta charset="UTF-8">
+  <title>Мои отчёты</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+  <style>
+    .report-container {
+      width: 100%;
+      height: 600px;
+      border: 1px solid #ddd;
+      margin-top: 10px;
+    }
+  </style>
+</head>
   <body>
     <div class="report-section">
       <span class="report-title">Тестовый отчет</span>
